[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/CreateFolderPopup.gd" type="Script" id=1]

[node name="CreateFolderPopup" type="PopupPanel"]
margin_right = 162.0
margin_bottom = 77.0
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 158.0
margin_bottom = 73.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 154.0
margin_bottom = 14.0
text = "Create a new folder"

[node name="FolderName" type="LineEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 154.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 154.0
margin_bottom = 66.0

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 54.0
margin_bottom = 20.0
text = "Cancel"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 58.0
margin_right = 118.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )

[node name="OkButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 152.0
margin_bottom = 20.0
text = "Ok"

[connection signal="text_changed" from="VBoxContainer/FolderName" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="VBoxContainer/FolderName" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
